Background image flicker fix

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -7,7 +7,7 @@ html, body {
 }
 input, textarea {
     -webkit-appearance: none;
-	-webkit-border-radius: 0; 
+	-webkit-border-radius: 0;
 	border-radius: 0;
 	-webkit-padding: 0;
 	padding: 0;
@@ -24,8 +24,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -37,7 +37,7 @@ time, mark, audio, video {
     background:transparent;
 }
 /* HTML5 display-roles */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -62,8 +62,8 @@ table {
 input, select {
     vertical-align:middle;
 }
-html, body {
-	/*height:100%;*/
+body {
+	height:100%;
 }
 
 /* STRUCTURE ==========================*/
@@ -102,14 +102,14 @@ article {
 	margin: 1em 0;
 }
 footer {
-	clear: both;	
+	clear: both;
 }
-@media all and (max-width: 640px) {	
+@media all and (max-width: 640px) {
 	.half-col, .audio-col {
 		width: 100%;
 	}
 }
-@media all and (max-width: 479px) {	
+@media all and (max-width: 479px) {
 	nav.main {
 		display: none;
 	}
@@ -244,7 +244,7 @@ nav.mobile a.trigger1 {
 	.links {
 		margin-top: -66px;
 		font-size: .8em;
-	}	
+	}
 }
 
 /* Folio Thumbs */
